--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,12 +1,24 @@
 {
-    "version":2,
-    "build":[
-        {"src":"*.js", "use":"@vercel/node"}
+    "version": 2,
+    "builds": [
+      {
+        "src": "client/package.json",
+        "use": "@vercel/react"
+      },
+      {
+        "src": "server/api/index.js",
+        "use": "@vercel/node"
+      }
     ],
-    "routes":[
-        {
-            "src":"/(.*)",
-            "dest":"/"
-        }
+    "routes": [
+      {
+        "src": "/api/(.*)",
+        "dest": "/server/api/index.js"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/client/build/$1"
+      }
     ]
-}
+  }
+  
